--- a/assets/style.css
+++ b/assets/style.css
@@ -10,12 +10,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #a8ff78;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #78ffd6, #a8ff78);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
 
 .title {
     margin: 16px;
     font-size: 24px;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 #wrapper {
@@ -23,11 +31,12 @@ body {
     height: 500px;
     border: 2px solid #ccc;
     border-radius: 8px;
+    box-shadow: 5px 8px 12px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 5px 8px 12px rgba(0, 0, 0, 0.3);
     margin: 0 550px;
+    background-color: #fff;
 }
 
 #txt {
@@ -71,6 +80,7 @@ button {
     font-weight: 100;
     cursor: pointer;
 }
+
 #txt:hover,
 button:hover {
     -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.4);
@@ -85,4 +95,8 @@ button:hover {
     border: 1px solid #bbb;
     -webkit-box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.4);
     box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.4);
+}
+
+.clear {
+    background-color: #fb7878;
 }
